<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button" >
    </Button>



    <Button
        android:id="@+id/btnServiceStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start">
    </Button>
    <Button
        android:id="@+id/btnServiceStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop">
    </Button>
    <ProgressBar 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true">
    </ProgressBar>
    
</LinearLayout>